# vinyl-manager

./: .gitignore  README.md
audio-analyzer/: .gitignore  README.md  requirements.txt
backend/: .gitignore  .trivyignore  README.md  data.sql  db.sql  main.py  package-lock.json  package.json  pyproject.toml  startup.sh  test.py
backend/alembic/: env.py
backend/alembic/versions/: 0b5c05669fb4_id_number_unique.py  139e68b51a21_new_relations.py  171a08973553_audio_as_base64.py  45fd72c4fb31_add_release_purchased_at.py  6ba57c3cca7f_add_release_fields.py  83e7ec2f24dd_add_release_attributes.py  855cba5c0cc5_many_to_many_artists_label_release.py  8ab544edb3a5_add_release_track_audio.py  a0ab444e5cb6_create_models.py  acb09fe4d7c4_id_number_for_releases.py  e5da33c19faa_move_audio_to_track.py  ff4b8684d510_playbook_db.py
backend/app/: db.py  factory.py
backend/app/api/: __init__.py  backup.py  discogs.py  mixtape.py  release.py  utils.py
backend/app/core/: config.py
backend/app/models/: __init__.py  artist.py  artist_release_association.py  label.py  label_release_association.py  release.py  track.py
backend/app/schemas/: playbook.py  release.py
backend/app/service/: analyze.py  discogs.py
backend/app/service/release/: csv_export.py  csv_import.py  sync_discogs.py
backend/app/utils/: calculations.py
backend/docker/dev/: Dockerfile
backend/docker/ops/: Dockerfile
backend/static/: Playbook_db_Template_v2_230623.xlsx
backend/supabase/: config.toml
backend/supabase/functions/import-deejay-de/: index.ts
backend/tests/: conftest.py
dev/: .env.example  (+1 more)
(+58 files in other folders)
