[tool.poetry]
name = "timesheet-automation-backend"
version = "0.1.0"
description = ""
authors = []

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.98.0"
uvicorn = "^0.23.2"
pydantic = "^1.10.12"
requests = "^2.31.0"
alembic = "^1.11.3"
psycopg2-binary = "^2.9.7"
asyncpg = "^0.28.0"
SQLAlchemy = "^2.0.20"
gunicorn = "^21.2.0"
emails = "^0.6"
jinja2 = "^3.1.2"
itsdangerous = "^2.1.2"
python-multipart = "^0.0.6"
pandas = "^2.1.3"
openpyxl = "^3.1.2"
python3-discogs-client = "^2.7"

[tool.poetry.group.dev.dependencies]
black = "^23.7.0"
pytest = "^7.4.0"
ipython = "^8.14.0"
pytest-cov = "^4.1.0"
httpx = "^0.24.1"
pytest-asyncio = "^0.21.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.cruft]
skip = [".env"]

[tool.pytest.ini_options]
asyncio_mode = 'auto'
